--- a/h/ho/hot/hotsheet.com.html
+++ b/h/ho/hot/hotsheet.com.html
@@ -1,95 +1,228 @@
-<!--The following is the downloaded HTML source of the hotsheet.com privacy policy that was archived on 2003-10-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20031001203640id_/http%3A//www.hotsheet.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hotsheet.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615022227id_/http%3A//www.hotsheet.com/privacy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//w3c//dtd html 3.2//en"><html><head>
-<title>HotSheet.com,Inc. Privacy Policy</title>
+<html xmlns="http://www.w3.org/1999/xhtml"><head>
+<base href="http://www.hotsheet.com/">
+<title>HotSheet.com privacy policy</title>
+<style type="text/css">
+<!--
+td {
+        font-size: 14px;
+}
+.CatTop {
+        font-size:15px;
+}
+.topColor ul {
+        margin-left: 15px;
+}
+.topColor li {
+        list-style-type: disc;
+        font: 10px/14px verdana;
+        color: #c00;
+}
+.topColor p {
+        font: 24px/26px verdana;
+        margin: 0px;
+        padding: 0px;
+}
+.topColor a:link {
+        text-decoration: none;
+        color: #000;
+        }
+.topColor a:visited {
+        text-decoration: none;
+        color: #000;
+        }
+.logoColor {
+        background-color: #c00;
+        }
+.a1  {
+    float: left;
+    width: 100%;
+        }
+#pageHeader {
+        background-color: #fff;
+        position:absolute;
+        left:0px;
+        top:0px;
+        height: 54px;
+        width: 100%;
+        }
+#logoContainer {
+        position:absolute;
+        left:6px;
+        top:7px;
+        height: 42px;
+        width: 220px;
+        }
+#selectStyle {
+        background-color: #fff;
+        position:absolute;
+        top:2px;
+        left: 265px;
+        }
+#topText {
+        background-color: #fff;
+        position:absolute;
+        top:17px;
+        left:355px;
+        width: 380px;
+        overflow:hidden;
+        }
+#leftAd {
+        position:absolute;
+        left:10px;
+        top:59px;
+        width: 728px;
+        height:90px;
+                }
+
+#links {
+        position:relative;
+        top:0px;
+        margin-left:8px;
+        margin-right:5px;
+
+    }
+
+#news {
+        margin-top:66px;
+        width:98%;
+padding: 15px;
+        }
+-->
+</style>
+<script type="text/javascript">
+<!-- hide
+
+window.defaultStatus='';
+
+
+function hidestatus(){
+window.status=''
+return true
+}
+if (document.layers)
+document.captureEvents(Event.MOUSEOVER | Event.MOUSEOUT)
+document.onmouseover=hidestatus
+document.onmouseout=hidestatus
+
+
+function readCookie(Name) {
+  var cookies = document.cookie;
+  if (cookies.indexOf(Name + '=') == -1) return null;
+  var start = cookies.indexOf(Name + '=') + (Name.length + 1);
+  var finish = cookies.substring(start,cookies.length);
+  finish = (finish.indexOf(';') == -1) ? cookies.length : start + finish.indexOf(';');
+  return unescape(cookies.substring(start,finish));
+}
+
+
+
+if (document.cookie.indexOf('style=')!=-1) {
+    css = readCookie('style');
+    document.write('<style type="text/css" media="screen">@import "' + css + '.css";</' + 'style>\n');
+}else{
+    document.write('<style type="text/css" media="screen">@import "hs_1.css";</' + 'style>\n');
+}
+
+// -->
+</script><style type="text/css" media="screen">@import "hs_1.css";</style>
+
+
 </head>
+<body>
 
-<body bgcolor="#ffffff" text="#000000" link="#0000ff" vlink="#800080" alink="#ff0000">
-<table width="100%" bgcolor="#ffffff" border="0"><tbody><tr><td align="center"><a href="http://www.hotsheet.com/"><img src="http://www.hotsheet.com/hs_215x55.gif" width="215" height="55" alt="home" border="0"></a></td><td align="center"><a href="http://store.hotsheet.com/"><img src="http://store.hotsheet.com/media/hsps_288x66.gif" width="216" height="49" border="0" vspace="5"></a></td></tr>
-</tbody></table>
-<center><br><font face="arial,helvetica" color="#cc0000" size="+2"><b>PRIVACY POLICY</b></font><p>
-<table cellpadding="15" cellspacing="0" border="1" bordercolor="#cc0000" width="80%">
+<div id="pageHeader">
+<div id="logoContainer" class="logoColor"><a href="http://www.hotsheet.com/"><img src="hs_220x42t.gif" width="220" height="42" border="0" alt="HotSheet.com"></a></div>
+</div>
+<div id="links">
+<div id="news" class="a1">
+<center><p>
+<table cellpadding="15" cellspacing="0" border="1" width="80%">
 	<tbody><tr>
 		<td>
-<font face="arial,helvetica">
-<font size="+2"><b>Summary of Privacy Policy</b><br></font><font size="+1">
-The information provided to us through our web sites is held in strict confidence. The purpose of information collected by HotSheet.com,Inc. is to either enhance the user experience through customized features, or to process orders through our ShopSheet paper store.  User specific data will not be shared, sold or made available to any outside agencies.  <p><b>This policy does not apply to our e-mail service.</b>  HotSheet e-mail is provided by and administered through an outside partner company with a separate privacy policy.  
-</p></font><p><font size="+1"></font>
+<font size="3"><b>Summary of Privacy Policy</b><br></font><font size="+1">
+The information provided to us through our web sites is held in strict confidence. The purpose of information collected by HotSheet.com,Inc. is only to enhance the user experience through customized features.  User specific data will not be shared, sold or made available to any outside agencies.<br>
+</font>
 <br> <br>
-<font size="-1"><b>Information Collection and Use</b><br>
+<p>
+<b>Information Collection and Use</b><br>
 HotSheet.com Inc. collects information from our users at several different points on our web site. HotSheet.com Inc. is the sole owner of the information collected for our e-commerce services and customization features.  We will not sell, share, or rent this information to others.  
-</font></p><p><font size="-1">
-Customization features on our primary HotSheet directory page use a Cookie on the users computer to store data (ie:zip code, colors, etc).  The information for these features is not transmitted to, nor stored by, HotSheet.com.</font></p><p><font size="-1">
+Customization features on our primary HotSheet directory page use a Cookie on the users computer to store data (ie:zip code, colors, etc).  The information for these features is not transmitted to, nor stored by, HotSheet.com.
+<br>
 Our My HotSheet service allows users to create and maintain a personalized page of favorite web site links. The custom information for this service is transmitted to HotSheet.com, and is stored in databases on our computers.  The personalized link page can be accessed and maintained only by individuals with the appropriate user name and password. We do provide a method for a registered user to allow use of their link collection by others (accessed directly by a custom URL), without allowing additions or changes by the visiting user.
-</font></p><p><font size="-1">
+</p><p>
 <b>Registration</b><br>
-In order to use our My HotSheet custom link management features a user must first complete a registration process.  During registration a user is required to provide a an e-mail address.  The address is used to contact the user with a registration confirmation and may also be used for future site specific updates and information.  It is optional for the user to provide other information requested (ie: zip code), but entry is encouraged to allow complete personalization and features.</font></p><p><font size="-1">
-</font></p><p><font size="-1">
+In order to use our My HotSheet custom link management features a user must first complete a registration process.  During registration a user is required to provide a an e-mail address.  The address is used to contact the user with a registration confirmation and may also be used for future site specific updates and information.  It is optional for the user to provide other information requested (ie: zip code), but entry is encouraged to allow complete personalization and features.
+</p><p>
 <b>Cookies</b><br>
-A cookie is a piece of data stored on the user's hard drive containing information about the user.  Usage of a cookie is in no way linked to any personally identifiable information while on our site. For instance, by setting a cookie on our site, a registered My HotSheet user would not have to log in each time they wish to access their link page.  If a user's web browser rejects the cookie they may still use our site.  The only drawback to this is that the user will not be able to use any custom HotSheet services.</font></p><p><font size="-1">
+A cookie is a piece of data stored on the user's hard drive containing information about the user.  Usage of a cookie is in no way linked to any personally identifiable information while on our site. For instance, by setting a cookie on our site, a registered My HotSheet user would not have to log in each time they wish to access their link page.  If a user's web browser rejects the cookie they may still use our site.  The only drawback to this is that the user will not be able to use any custom HotSheet services.<br>
 Some of our business partners use cookies on our site (for example, advertisers) and features administered by partner sites also use cookies (ie: e-mail).  However, we have no access to or control over these cookies.
-</font></p><p><font size="-1">
+</p><p>
 <b>Log Files</b><br>
 We use IP addresses to analyze trends, administer the site, track user's movement within our site, and gather broad demographic information for aggregate use.  IP addresses are not linked to personally identifiable information.
-</font></p><p><font size="-1">
+</p><p>
 <b>Sharing</b><br>
 We may share aggregated demographic information with our partners and advertisers. This is anonymous data and is not linked to any personal information that can identify any individual person.
-</font></p><p><font size="-1">
+<br>
 We partner with other parties to provide specific services. When the user signs up for these services, we will share names, or other contact information that is necessary for the third party to provide these services.
 These parties are not allowed to use personally identifiable information except for the purpose of providing these services.
-</font></p><p><font size="-1">
+<br>
 We use an outside shipping company to ship orders, and a credit card processing company to bill users for goods and services. These companies do not retain, share, store or use personally identifiable information for any secondary purposes.
-</font></p><p><font size="-1">
+</p><p>
 <b>Links</b><br>
 This web site contains links to other sites. Please be aware that HotSheet.com Inc. is not responsible for the privacy practices of these other sites.  This privacy statement applies solely to information collected by HotSheet.com.  Users should be aware when they leave our site and are encouraged to read the privacy statements of each web site that collects personally identifiable information.  
-</font></p><p><font size="-1">
+</p><p>
 <b>Newsletter</b><br>
 If we produce a newsletter and a user wishes to subscribe, we ask for contact information such as name and e-mail address.  We will not sell our newsletter mailing lists to other companies, although other companies may advertise within the content of our newsletter.
-</font></p><p><font size="-1">
+</p><p>
 <b>Surveys &amp; Contests</b><br>
 From time-to-time our site requests information from users via surveys or contests.  Participation in these surveys or contests is completely voluntary and the user therefore has a choice whether or not to disclose this information.  Information requested may include contact information (such as name and shipping address), and demographic information (such as zip code, age level).  Contact information will be used to notify the winners and award prizes.  Survey information will be used for purposes of monitoring or improving the use and satisfaction of this site.
-</font></p><p><font size="-1">
+</p><p>
 <b>Security</b><br>
 HotSheet.com, Inc. takes every precaution to protect our users' information.  When users submit sensitive information via the web site, information is protected both online and off-line.
-</font></p><p><font size="-1">
+<br>
 When our order checkout form asks users to enter sensitive information (such as credit card number), that information is encrypted and is protected with the best encryption software in the industry - SSL.  While on a secure page, such as our order form, the lock icon on the bottom of Web browsers such as Netscape Navigator and Microsoft Internet Explorer becomes locked, as opposed to un-locked, or open, when you are just 'surfing'.  To learn more about SSL, follow this link http://www.ssl.com.    
-</font></p><p><font size="-1">
-While we use SSL encryption to protect sensitive information online, we also do everything in our power to protect user-information off-line.  All of our users' information, not just the sensitive information mentioned above, is restricted in our offices.  Only employees who need the information to perform a specific job (for example, a billing clerk or a customer service representative) are granted access to personally identifiable information.</font></p><p><font size="-1">
-All employees are kept up-to-date on our security and privacy practices.  At any time policies are changed or added, employees are notified and/or reminded about the importance placed on privacy, and what they must do to ensure that customer information is protected.</font></p><p><font size="-1">
+<br>
+While we use SSL encryption to protect sensitive information online, we also do everything in our power to protect user-information off-line.  All of our users' information, not just the sensitive information mentioned above, is restricted in our offices.  Only employees who need the information to perform a specific job (for example, a billing clerk or a customer service representative) are granted access to personally identifiable information.<br>
+All employees are kept up-to-date on our security and privacy practices.  At any time policies are changed or added, employees are notified and/or reminded about the importance placed on privacy, and what they must do to ensure that customer information is protected.<br>
 Regarding computer hardware, the web servers that are used to store personally identifiable information are kept in a secure physical environment, accessible only by authorized personnel.
-</font></p><p><font size="-1">
+<br>
 If you have any questions about the security at our web site, you can send an e-mail to webmaster@hotsheet.com.
-</font></p><p><font size="-1">
+</p><p>
 <b>Special Offers</b><br>
 We send all new members a welcoming e-mail to verify password and user name. Established members will occasionally receive information on products, services, special deals, and/or a periodic newsletter. Out of respect for the privacy of our users we present the option to not receive these types of communications. Please see our choice and opt-out below.
-</font></p><p><font size="-1">
+</p><p>
 <b>Site and Service Updates</b><br>
 We also may send the user site and service announcement updates. Members are not able to un-subscribe from service announcements, which contain important information about the service. We communicate with the user to provide requested services and in regards to issues relating to their account via e-mail or phone.
-</font></p><p><font size="-1">
+</p><p>
 <b>Correction/Updating Personal Information</b><br>
 If a user's personally identifiable information changes (such as your zip code), or if a user no longer desires our service, we will endeavor to provide a way to correct, update or remove that user's personal data provided to us.  This can usually be done at the member options page or by e-mailing our Customer Support.
-</font></p><p><font size="-1">
+</p><p>
 <b>Choice/Opt-out</b><br>
 Our users are given the opportunity to 'opt-out' of having their information used for purposes not directly related to our site at the point where we ask for the information.  For example, our order form has an 'opt-out' mechanism so users who buy a product from us, but don't want any marketing material, can keep their e-mail address off of our lists.  
-</font></p><p><font size="-1">
+<br>
 Users who no longer wish to receive our newsletter or promotional materials from our partners may opt-out of receiving these communications by replying to unsubscribe in the subject line in the e-mail or e-mail us at webmaster@hotsheet.com . Users of our site are always notified when their information is being collected by any outside parties.  We do this so our users can make an informed choice as to whether they should proceed with services that require an outside party, or not.
-</font></p><p><font size="-1">
+</p><p>
 <b>E-Mail Service</b><br>
 This privacy policy does not apply to the HotSheet e-mail service.  HotSheet e-mail is provided by and administered through an outside partner company with a separate privacy policy. 
-</font></p></font><p><font face="arial,helvetica"><font size="-1">
+</p><p>
 <b>Notification of Changes</b><br>
 If we decide to change our privacy policy, we will post those changes on our homepage so our users are always aware of what information we collect, how we use it, and under circumstances, if any, we disclose it.  If at any point we decide to use personally identifiable information in a manner different from that stated at the time it was collected, we would notify users by way of an e-mail.  Users will have a choice as to whether or not we use their information in this different manner. We will use information in accordance with the privacy policy under which the information was collected. 
-<br>
-</font>
-</font>
-		</p></td>
+</p><br>
+		</td>
 	</tr>
 </tbody></table>
 </p></center><br>
- <br>
+</div></div>
+<div id="footer" class="bgText" style="margin-top: 10px;text-align:center;"><p><a href="http://www.hotsheet.com/"><img src="hs_88x31.gif" width="88" height="31" border="0" vspace="10"></a><br>© 1995-2005 <a href="http://www.hotsheet.com/">HotSheet.com, Inc.</a></p></div>
+<div id="selectStyle" class="topColor">
+<ul><li style="color:#000000"><a href="http://www.hotsheet.com/">home</a></li><li style="color:#000000"><a href="http://my.hotsheet.com/">my hotsheet</a></li></ul>
+</div>
+<div id="topText" class="topColor" align="center"><p><b>Privacy Policy</b></p></div>
 
-<table width="100%" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><font face="ARIAL,HELVETICA" size="-2">© 2003 <a href="http://www.hotsheet.com/"><u>Hotsheet.com, Inc.</u></a> All Rights Reserved.</font></td></tr></tbody></table>
+
 
 
 
