--- a/n/ns/nso/nsoftware.com.html
+++ b/n/ns/nso/nsoftware.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nsoftware.com privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231110557id_/http%3A//www.nsoftware.com/company/legal/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nsoftware.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615022305id_/http%3A//nsoftware.com/company/legal/privacy.aspx) for the most accurate reproduction.-->
 
 <html><head>
 		<title>/n software inc. - Privacy Policy</title>
@@ -7,6 +7,7 @@
 		<meta http-equiv="reply-to" content="webmaster@nsoftware.com">
 		<meta name="vs_targetSchema" content="http:/schemas.microsoft.com/intellisense/ie5">
 		<link href="/templates/stylesheet.css" type="text/css" rel="stylesheet">
+		<link rel="alternate" type="application/rss+xml" title="RSS" href="http:/www.nsoftware.com/rss/">
 	</head>
 	<body>
 		<table border="0" cellpadding="0" cellspacing="0" width="100%" height="100%" background="/img/lines.gif">
@@ -339,7 +340,7 @@
 											</tbody></table>
 											<table cellspacing="0" cellpadding="0" border="0">
 												<tbody><tr>
-													<td class="white" align="center" colspan="9">© Copyright 2005&nbsp;<b>/n software</b>&nbsp;inc.</td>
+													<td class="white" align="center" colspan="9">© Copyright 2006&nbsp;<b>/n software</b>&nbsp;inc.</td>
 												</tr>
 											</tbody></table>
 										</td>
@@ -353,6 +354,13 @@
 				<td><img height="1" alt="" src="/img/spacer.gif" width="1" border="0"></td>
 			</tr>
 		</tbody></table>
+		
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-301414-4";
+urchinTracker();
+</script>
 	
 
 </body></html>
