--- a/m/me/met/metoperafamily.org.html
+++ b/m/me/met/metoperafamily.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the metoperafamily.org privacy policy that was archived on 2005-12-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051231163945id_/http%3A//www.metoperafamily.org/metopera/utility/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the metoperafamily.org privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615023840id_/http%3A//www.metoperafamily.org/metopera/utility/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 
@@ -23,7 +23,14 @@
 <link rel="icon" href="/favicon.ico" type="image/x-icon"> 
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
+<script type="text/javascript">
+//<![CDATA[
+	var rootVirtual = "";
+//]]>
+</script>
+
 <script type="text/javascript" language="JavaScript" src="/_includes/metopera/main.js"></script>
+<script type="text/javascript" language="JavaScript" src="/_includes/metopera/sifr.js"></script>
 <script type="text/javascript" language="Javascript1.1">
 preloadArray = ["/_img/metopera/nav/home_mo.gif",
 				"/_img/metopera/nav/season_mo.gif",
@@ -33,7 +40,12 @@ preloadArray = ["/_img/metopera/nav/home_mo.gif",
 				"/_img/metopera/nav/history_mo.gif"];
 </script>
 
-<script src="/_includes/_common/__utm.js" type="text/javascript"></script><script language="JavaScript1.5">_ujv='1.5';</script>	
+<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript"></script>
+<script type="text/javascript">
+_uacct = "UA-230585-1";
+urchinTracker();
+</script>
+	
 	
 </head>
 <body>
@@ -43,7 +55,7 @@ preloadArray = ["/_img/metopera/nav/home_mo.gif",
 	<a class="skipLink" href="#startContent" accesskey="2"><img alt="Skip navigation" src="/_img/metopera/s.gif" width="1" height="1" border="0"></a>
 
 
-<!--METROWEB1 -->
+<!--METROWEB3 -->
 
 
 
@@ -88,18 +100,19 @@ preloadArray = ["/_img/metopera/nav/home_mo.gif",
 			<td align="right" style="padding-right: 0;" width="1">
 				<label for="universalSearchBox" accesskey="4"><img src="/_img/universalnav/search.gif" alt="Search" width="37" height="9"></label>
 			</td>
-			<td nowrap="nowrap" align="right" width="185" style="padding-left: 5px;">
+			<td nowrap="nowrap" align="right" width="195" style="padding-left: 5px;">
+			
+			<form method="get" action="http://catsearch.atomz.com/search/catsearch/">
+
+				<input type="hidden" name="sp-a" value="sp1002e461">
+				<input type="hidden" name="sp-p" value="all">
+				<input type="hidden" name="sp-f" value="ISO-8859-1">
+				<input type="hidden" name="sp-t" value="universal_jan05">
+
+				<input type="text" name="sp-q" id="universalSearchBox">&nbsp;<input type="image" src="/_img/universalnav/search_arrow.gif" id="universalSearchArrow">
 				
-<form method="get" action="http://catsearch.atomz.com/search/catsearch/">
-
-	<input type="hidden" name="sp-a" value="sp1002e461">
-	<input type="hidden" name="sp-p" value="all">
-	<input type="hidden" name="sp-f" value="ISO-8859-1">
-	<input type="hidden" name="sp-t" value="universal_jan05">
-
-	<input type="text" name="sp-q" id="universalSearchBox">&nbsp;<input type="image" src="/_img/universalnav/search_arrow.gif" id="universalSearchArrow">
-	
-</form>
+			</form>
+			
 			</td>
 			
 		</tr>
@@ -107,7 +120,7 @@ preloadArray = ["/_img/metopera/nav/home_mo.gif",
 </div>
 
 	<h1>
-	<img alt="The Metropolitan Opera" src="/_img/metopera/h1/generic.jpg" width="750" height="91">
+	<img alt="The Metropolitan Opera" src="/_img/metopera/h1/utility.jpg" width="750" height="91">
 	</h1>
 
 	<div id="nav1">
@@ -148,9 +161,8 @@ preloadArray = ["/_img/metopera/nav/home_mo.gif",
 				<div id="mainCol" class="twoCol">
 	<a name="startContent" id="startContent"></a>
 
-
-<h2><img alt="Privacy Policy" src="/_img/metopera/h2/privacy_policy.gif" width="289" height="22" border="0"></h2>
-
+<h2>Privacy Policy</h2>
+<br>
 
 <p>
 	The Metropolitan Opera and the Metropolitan Opera Guild are committed to protecting the privacy and personal information of visitors to our web sites.  The personal information referred to in this statement of our Privacy Policy includes, but may not be limited to, names, addresses, telephone numbers, e-mail addresses, and credit card information. As part of our commitment to your privacy, we support and adhere to the guidelines and practices adopted by the Direct Marketing Association’s Privacy Promise to American Consumers.
@@ -239,7 +251,7 @@ preloadArray = ["/_img/metopera/nav/home_mo.gif",
 		</tr>
 	</tbody></table>
 	<p>
-	© Copyright 2005 The Metropolitan Opera
+	© Copyright 2006 The Metropolitan Opera
 	&nbsp;|&nbsp;
 
 	
@@ -265,6 +277,6 @@ preloadArray = ["/_img/metopera/nav/home_mo.gif",
 
 
 
-<!-- Copyright 2005 POP -->
-<!-- http://experiencepop.com/ --><!-- .85 -->
+<!-- Copyright 2006 POP -->
+<!-- http://experiencepop.com/ -->
 </body></html>
